# quick2-agent

./: .env.example  .gitignore  .replit  DOCKER_SETUP_GUIDE.md  Dockerfile  ORCHESTRATION_GUIDE.md  README.md  REPLIT_ALTERNATIVE_GUIDE.md  docker-compose.yml  pyproject.toml  replit.md  requirements.txt  run_orchestration_demo.sh  standalone_demo.py  test_orchestration.py
attached_assets/: Pasted--You-are-an-expert-systems-engineer-Scaffold-a-runnable-Python-FastAPI-microservices-monorepo-named-1762511080771_1762511080771.txt
config/: autonomy.yaml  prometheus.yml
libs/common/: __init__.py  models.py
services/benchmarks/: main.py
services/dashboard/: main.py
services/dashboard/templates/: dashboard.html
services/executor/: main.py
services/gateway/: main.py
services/memory/: main.py
services/planner/: main.py
services/router/: main.py
services/validator/: main.py
skills/: skills.yaml  skills.yaml.backup
tests/: test_services.py
